Доделал логику для одного экрана с кэшированием всех просмотренных страниц.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Sirius</string>
+    <string name="default_msg_error">При обработке данных возникла ошибка.</string>
+    <string name="default_action">Обновить</string>
 </resources>
