Добавил диалог для отображения краткой инфы по гифке, добавил сохранение "инфы о сессии"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Sirius</string>
     <string name="default_msg_error">При обработке данных возникла ошибка.</string>
     <string name="default_action">Обновить</string>
+    <string name="author_title">Автор:</string>
 </resources>
